[gd_scene load_steps=5 format=3 uid="uid://bpo0gbkrjsu24"]

[ext_resource type="Script" path="res://Menu.gd" id="1_pvbv3"]
[ext_resource type="PackedScene" uid="uid://cv85bafp0tf4h" path="res://Game.tscn" id="2_rvojf"]

[sub_resource type="LabelSettings" id="LabelSettings_cffb0"]
font_size = 96

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_do2ye"]
properties/0/path = NodePath("Title:visible")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("VBoxContainer:visible")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Game:visible")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvbv3")

[node name="Title" type="Label" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 74.0
offset_bottom = -439.0
text = "PONG"
label_settings = SubResource("LabelSettings_cffb0")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 368.0
offset_top = 263.0
offset_right = -380.0
theme_override_constants/separation = 24
alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostIPTextEdit" type="TextEdit" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "Host IP-Adress"

[node name="JoinButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_do2ye")

[node name="Game" parent="." instance=ExtResource("2_rvojf")]
visible = false

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
